[package]
name = "amp-async"
version = "0.1.0"
authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]
edition = "2018"
description = "Implementation of the AMP remoting protocol"
license = "GPL-3.0+"
categories = ["network-programming"]


[dependencies]
tokio = "0.2.0-alpha.4"
bytes = "0.4.12"
futures-util-preview = "0.3.0-alpha.18"

[patch.crates-io]
tokio = {git="https://github.com/jothan/tokio.git", rev="fix-blocking-bookeeping"}
