[package]
name = "amp-async"
version = "0.1.3"
authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]
edition = "2018"
description = "Implementation of the AMP remoting protocol"
license = "GPL-3.0+"
categories = ["network-programming"]


[dependencies]
tokio = {version="0.2", features=["tcp", "io-util", "signal", "sync", "stream", "rt-util", "io-std", "macros"]}
tokio-util = {version="0.3", features=["codec"]}
bytes = "0.5"
futures-util = {version="0.3", features=["sink"]}
