[package]
name = "amp-async"
version = "0.1.4"
authors = ["Jonathan Bastien-Filiatrault <joe@x2a.org>"]
edition = "2018"
description = "Implementation of the AMP remoting protocol"
license = "GPL-3.0+"
categories = ["network-programming"]


[dependencies]
tokio = {version="0.3", features=["io-util", "signal", "sync", "stream", "io-std", "macros", "rt", "rt-multi-thread"]}
tokio-util = {version="0.5", features=["codec"]}
bytes = { version="0.6", features=["serde"] }
futures = {version="0.3"}
serde = { version="1.0", features=["derive"] }
serde_bytes = "0.11"
amp-serde = { version="0.1.4", path="../amp-serde" }
async-trait = "0.1.41"
thiserror = "1.0.20"
